--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=9090
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:mysql://148.72.232.181:3306/tamilmuthiraidb
+spring.datasource.username=sarangapani
+spring.datasource.password=SingaiSaga84
+spring.datasource.hikari.max-lifetime=50000
+spring.datasource.hikari.write-timeout=50000
 
+replay.callback.url=http://localhost:8080/
+replay.callback.path=policy/replay
