--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9090
+server.port=8086
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
@@ -10,5 +10,8 @@ spring.datasource.password=SingaiSaga84
 spring.datasource.hikari.max-lifetime=50000
 spring.datasource.hikari.write-timeout=50000
 
-replay.callback.url=http://localhost:8080/
+replay.callback.url=http://20.120.52.99:8085/
 replay.callback.path=policy/replay
+
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
