--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=SingaiSaga84
 spring.datasource.hikari.max-lifetime=50000
 spring.datasource.hikari.write-timeout=50000
 
-replay.callback.url=http://20.120.52.99:8085/
+replay.callback.url=http://localhost:8085/
 replay.callback.path=policy/replay
 
 feign.client.config.default.connectTimeout: 160000000
