--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url=jdbc:mysql://148.72.232.181:3306/tamilmuthiraidb
+spring.datasource.url=
 spring.datasource.username=sarangapani
 spring.datasource.password=SingaiSaga84
 spring.datasource.hikari.max-lifetime=50000
@@ -15,3 +15,5 @@ replay.callback.path=policy/replay
 
 feign.client.config.default.connectTimeout: 160000000
 feign.client.config.default.readTimeout: 160000000
+
+reconcile.delay=600000
